--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -189,7 +189,7 @@
 
               <li class="active mt-2">
                 <a href="#filterMaterials" data-toggle="collapse" aria-expanded="false"
-                  class="dropdown-toggle menu-color">Materiales
+                  class="dropdown-toggle menu-color">Composición
                 </a>
                 <ul class="collapse list-unstyled" id="filterMaterials">
                   <div class="overflow-auto container-scroll">
