--- a/src/app/components/informes/informe-descuento/informe-descuento.component.html
+++ b/src/app/components/informes/informe-descuento/informe-descuento.component.html
@@ -121,7 +121,7 @@
 
               <li class="active mt-2">
                 <a href="#filterMaterials" data-toggle="collapse" aria-expanded="false"
-                  class="dropdown-toggle menu-color">Materiales
+                  class="dropdown-toggle menu-color">Composición
                 </a>
                 <ul class="collapse list-unstyled" id="filterMaterials">
                   <div class="overflow-auto container-scroll">
@@ -262,7 +262,7 @@
 
             <li class="active mt-2">
               <a href="#filterMaterials" data-toggle="collapse" aria-expanded="false"
-                class="dropdown-toggle menu-color">Materiales
+                class="dropdown-toggle menu-color">Composición
               </a>
               <ul class="collapse list-unstyled" id="filterMaterials">
                 <div class="overflow-auto container-scroll">
