--- a/src/app/components/informes/informe-nuevos/informe-nuevos.component.html
+++ b/src/app/components/informes/informe-nuevos/informe-nuevos.component.html
@@ -116,7 +116,7 @@
 
               <li class="active mt-2">
                 <a href="#filterMaterials" data-toggle="collapse" aria-expanded="false"
-                  class="dropdown-toggle menu-color">Materiales
+                  class="dropdown-toggle menu-color">Composición
                 </a>
                 <ul class="collapse list-unstyled" id="filterMaterials">
                   <div class="overflow-auto container-scroll">
@@ -258,7 +258,7 @@
 
             <li class="active mt-2">
               <a href="#filterMaterials" data-toggle="collapse" aria-expanded="false"
-                class="dropdown-toggle menu-color">Materiales
+                class="dropdown-toggle menu-color">Composición
               </a>
               <ul class="collapse list-unstyled" id="filterMaterials">
                 <div class="overflow-auto container-scroll">
