--- a/src/app/components/informes/informes.component.css
+++ b/src/app/components/informes/informes.component.css
@@ -36,6 +36,10 @@
   border-bottom-right-radius: 10px;
 }
 
+.hoverSvgFilter:hover {
+  cursor: pointer;
+}
+
 .iconox {
   font-size: 16px !important;
 }
