--- a/src/app/components/informes/informe-nuevos/informe-nuevos.component.css
+++ b/src/app/components/informes/informe-nuevos/informe-nuevos.component.css
@@ -17,6 +17,10 @@
   margin-top: -10px;
 }
 
+.hoverSvgFilter:hover {
+  cursor: pointer;
+}
+
 .menu-color {
   color: #212121;
   font-weight: bold;
