--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -81,7 +81,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal(template)" width="17" heigth="17"
           xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
           viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#358da3 " role="img"
-          aria-label="Illustration of a Funnel">
+          aria-label="Illustration of a Funnel" class="hoverSvgFilter">
           <g id="__id33_ssutzzo1g">
             <path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20" transform="translate(-350 -144.09)"
               style="fill: inherit"></path>
@@ -91,6 +91,13 @@
         <ng-template #template>
           <div class="modal-header">
             <h4 class="modal-title pull-left">Filtros</h4>
+            <div *ngFor="let filter of selectedFilter">
+              <ul>
+                <li>
+                  <p class="item-filter">{{filter.item}}</p>
+                </li>
+              </ul>
+            </div>
             <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
               <span aria-hidden="true">&times;</span>
             </button>
