ajustando los filtros de las tablas

--- a/src/app/components/informe-categoria/informe-categoria.component.html
+++ b/src/app/components/informe-categoria/informe-categoria.component.html
@@ -277,7 +277,7 @@
               <td data-label="Producto">
                 <img [src]="i.base64" class="prenda1" alt="imagen">
               </td>
-              <td data-label="Tipo de prenda"> {{i.imageName}} </td>
+              <td data-label="Tipo de prenda"> {{i.tipoPrenda}} </td>
               <td data-label="Retail"> {{i.origin}} </td>
               <td data-label="Color"> {{i.color}} </td>
               <td data-label="Talla"> {{i.talla}} </td>
