--- a/src/app/components/informes/informe-descuento/informe-descuento.component.css
+++ b/src/app/components/informes/informe-descuento/informe-descuento.component.css
@@ -106,4 +106,12 @@
       display: block;
     }
   }
+
+  .diferencia {
+    color: rgb(103 209 166);
+  }
+  
+  .diferencia2 {
+    color: rgb(255 92 96);
+  }
   
