filtro de nuevos en tablas funcionanndo

--- a/src/app/components/informes/informe-nuevos/informe-nuevos.component.css
+++ b/src/app/components/informes/informe-nuevos/informe-nuevos.component.css
@@ -106,3 +106,11 @@
       display: block;
     }
   }
+
+  .diferencia {
+    color: rgb(103 209 166);
+  }
+  
+  .diferencia2 {
+    color: rgb(255 92 96);
+  }
