filtros sku trabajando

--- a/src/app/components/informes/informe-sku/informe-sku.component.css
+++ b/src/app/components/informes/informe-sku/informe-sku.component.css
@@ -96,3 +96,10 @@
   }
 
   /* fin chart */
+  .diferencia {
+    color: rgb(103 209 166);
+  }
+  
+  .diferencia2 {
+    color: rgb(255 92 96);
+  }
