--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -106,7 +106,7 @@
 
                   <li *ngFor="let origin of originData">
                     <label class="control control--checkbox">
-                      <input class="marca check" type="checkbox" value="{{origin.value}}" name="{{origin.value}}"
+                      <input class="marca" type="checkbox" value="{{origin.value}}" name="{{origin.value}}"
                         (change)="validateCheckFilter($event.target.checked, origin, $event.target.className, $event.target)"
                         id="{{origin.value}}" />
                       {{origin.text}}
@@ -122,7 +122,7 @@
                 <ul class="collapse list-unstyled" id="filterCategory">
                   <li *ngFor="let category of categoryData">
                     <label class="control control--checkbox">
-                      <input class="categoria check2" type="checkbox" value="{{category.value}}"
+                      <input class="categoria" type="checkbox" value="{{category.value}}"
                         name="{{category.value}}"
                         (change)="validateCheckFilter($event.target.checked, category, $event.target.className, $event.target)"
                         id="{{category.value}}" />
@@ -140,7 +140,7 @@
                   <li *ngFor="let subcategory of subCategoryData">
                     <label class="control control--checkbox">
 
-                      <input class="subCategoria check3" type="checkbox" value="{{subcategory.value}}"
+                      <input class="subCategoria" type="checkbox" value="{{subcategory.value}}"
                         name="{{subcategory.value}}"
                         (change)="validateCheckFilter($event.target.checked, subcategory, $event.target.className, $event.target)"
                         id="{{subcategory.value}}" />
@@ -158,7 +158,7 @@
                   <div class="overflow-auto container-scroll">
                     <li *ngFor="let tipoprenda of tipoPrendaData">
                       <label class="control control--checkbox">
-                        <input class="tipoPrenda check4" type="checkbox" value="{{tipoprenda.value}}"
+                        <input class="tipoPrenda" type="checkbox" value="{{tipoprenda.value}}"
                           name="{{tipoprenda.value}}"
                           (change)="validateCheckFilter($event.target.checked, tipoprenda, $event.target.className, $event.target)"
                           id="{{tipoprenda.value}}" />
@@ -177,7 +177,7 @@
                   <div class="overflow-auto container-scroll">
                     <li *ngFor="let color of colorData">
                       <label class="control control--checkbox">
-                        <input class="color check5" type="checkbox" value="{{color.value}}" name="{{color.value}}"
+                        <input class="color" type="checkbox" value="{{color.value}}" name="{{color.value}}"
                           (change)="validateCheckFilter($event.target.checked, color, $event.target.className, $event.target)"
                           id="{{color.value}}" />
                         {{color.text}}
