--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -20,9 +20,9 @@
                     <li class="nav-item" routerLinkActive="active">
                         <a class="nav-link" [routerLink]="['/informes/informePrecios']">Informes</a>
                     </li>
-                    <li class="nav-item" routerLinkActive="active">
+                    <!--<li class="nav-item" routerLinkActive="active">
                         <a class="nav-link" style="cursor: pointer;" (click)="getScraping()">Web Scraping</a>
-                    </li>
+                    </li>-->
                     <li class="nav-item" routerLinkActive="active">
                         <a class="nav-link" [routerLink]="['/newImage']">Subir imagen</a>
                     </li>
