--- a/src/app/components/informes/informe-descuento/informe-descuento.component.html
+++ b/src/app/components/informes/informe-descuento/informe-descuento.component.html
@@ -38,7 +38,7 @@
 
                   <li *ngFor="let origin of originData">
                     <label class="control control--checkbox">
-                      <input class="marca check" type="checkbox" value="{{origin.value}}" name="{{origin.value}}"
+                      <input class="marca" type="checkbox" value="{{origin.value}}" name="{{origin.value}}"
                         (change)="validateCheckFilter($event.target.checked, origin, $event.target.className, $event.target)"
                         id="{{origin.value}}" />
                       {{origin.text}}
@@ -54,7 +54,7 @@
                 <ul class="collapse list-unstyled" id="filterCategory">
                   <li *ngFor="let category of categoryData">
                     <label class="control control--checkbox">
-                      <input class="categoria check2" type="checkbox" value="{{category.value}}"
+                      <input class="categoria" type="checkbox" value="{{category.value}}"
                         name="{{category.value}}"
                         (change)="validateCheckFilter($event.target.checked, category, $event.target.className, $event.target)"
                         id="{{category.value}}" />
@@ -72,7 +72,7 @@
                   <li *ngFor="let subcategory of subCategoryData">
                     <label class="control control--checkbox">
 
-                      <input class="subCategoria check3" type="checkbox" value="{{subcategory.value}}"
+                      <input class="subCategoria" type="checkbox" value="{{subcategory.value}}"
                         name="{{subcategory.value}}"
                         (change)="validateCheckFilter($event.target.checked, subcategory, $event.target.className, $event.target)"
                         id="{{subcategory.value}}" />
@@ -90,7 +90,7 @@
                   <div class="overflow-auto container-scroll">
                     <li *ngFor="let tipoprenda of tipoPrendaData">
                       <label class="control control--checkbox">
-                        <input class="tipoPrenda check4" type="checkbox" value="{{tipoprenda.value}}"
+                        <input class="tipoPrenda" type="checkbox" value="{{tipoprenda.value}}"
                           name="{{tipoprenda.value}}"
                           (change)="validateCheckFilter($event.target.checked, tipoprenda, $event.target.className, $event.target)"
                           id="{{tipoprenda.value}}" />
@@ -109,7 +109,7 @@
                   <div class="overflow-auto container-scroll">
                     <li *ngFor="let color of colorData">
                       <label class="control control--checkbox">
-                        <input class="color check5" type="checkbox" value="{{color.value}}" name="{{color.value}}"
+                        <input class="color" type="checkbox" value="{{color.value}}" name="{{color.value}}"
                           (change)="validateCheckFilter($event.target.checked, color, $event.target.className, $event.target)"
                           id="{{color.value}}" />
                         {{color.text}}
@@ -185,7 +185,7 @@
 
                 <li *ngFor="let origin of originData">
                   <label class="control control--checkbox">
-                    <input class="marca2 check" type="checkbox" value="{{origin.value}}" name="{{origin.value}}"
+                    <input class="marca2" type="checkbox" value="{{origin.value}}" name="{{origin.value}}"
                       (change)="validateCheckFilter2($event.target.checked, origin, $event.target.className, $event.target)"
                       id="{{origin.value}}" />
                     {{origin.text}}
@@ -201,7 +201,7 @@
               <ul class="collapse list-unstyled" id="filterCategory">
                 <li *ngFor="let category of categoryData">
                   <label class="control control--checkbox">
-                    <input class="categoria2 check2" type="checkbox" value="{{category.value}}" name="{{category.value}}"
+                    <input class="categoria2" type="checkbox" value="{{category.value}}" name="{{category.value}}"
                       (change)="validateCheckFilter2($event.target.checked, category, $event.target.className, $event.target)"
                       id="{{category.value}}" />
                     {{category.text}}
@@ -218,7 +218,7 @@
                 <li *ngFor="let subcategory of subCategoryData">
                   <label class="control control--checkbox">
 
-                    <input class="subCategoria2 check3" type="checkbox" value="{{subcategory.value}}"
+                    <input class="subCategoria2" type="checkbox" value="{{subcategory.value}}"
                       name="{{subcategory.value}}"
                       (change)="validateCheckFilter2($event.target.checked, subcategory, $event.target.className, $event.target)"
                       id="{{subcategory.value}}" />
@@ -236,7 +236,7 @@
                 <div class="overflow-auto container-scroll">
                   <li *ngFor="let tipoprenda of tipoPrendaData">
                     <label class="control control--checkbox">
-                      <input class="tipoPrenda2 check4" type="checkbox" value="{{tipoprenda.value}}"
+                      <input class="tipoPrenda2" type="checkbox" value="{{tipoprenda.value}}"
                         name="{{tipoprenda.value}}"
                         (change)="validateCheckFilter2($event.target.checked, tipoprenda, $event.target.className, $event.target)"
                         id="{{tipoprenda.value}}" />
@@ -255,7 +255,7 @@
                 <div class="overflow-auto container-scroll">
                   <li *ngFor="let color of colorData">
                     <label class="control control--checkbox">
-                      <input class="color2 check5" type="checkbox" value="{{color.value}}" name="{{color.value}}"
+                      <input class="color2" type="checkbox" value="{{color.value}}" name="{{color.value}}"
                         (change)="validateCheckFilter2($event.target.checked, color, $event.target.className, $event.target)"
                         id="{{color.value}}" />
                       {{color.text}}
