--- a/src/app/components/informes/informe-precio/informe-precio.component.html
+++ b/src/app/components/informes/informe-precio/informe-precio.component.html
@@ -54,7 +54,7 @@
                 <ul class="collapse list-unstyled" id="filterCategory">
                   <li *ngFor="let category of categoryData">
                     <label class="control control--checkbox">
-                      <input class="categoria check2" type="checkbox" value="{{category.value}}"
+                      <input class="categoria" type="checkbox" value="{{category.value}}"
                         name="{{category.value}}"
                         (change)="validateCheckFilter($event.target.checked, category, $event.target.className, $event.target)"
                         id="{{category.value}}" />
@@ -72,7 +72,7 @@
                   <li *ngFor="let subcategory of subCategoryData">
                     <label class="control control--checkbox">
 
-                      <input class="subCategoria check3" type="checkbox" value="{{subcategory.value}}"
+                      <input class="subCategoria" type="checkbox" value="{{subcategory.value}}"
                         name="{{subcategory.value}}"
                         (change)="validateCheckFilter($event.target.checked, subcategory, $event.target.className, $event.target)"
                         id="{{subcategory.value}}" />
@@ -90,7 +90,7 @@
                   <div class="overflow-auto container-scroll">
                     <li *ngFor="let tipoprenda of tipoPrendaData">
                       <label class="control control--checkbox">
-                        <input class="tipoPrenda check4" type="checkbox" value="{{tipoprenda.value}}"
+                        <input class="tipoPrenda" type="checkbox" value="{{tipoprenda.value}}"
                           name="{{tipoprenda.value}}"
                           (change)="validateCheckFilter($event.target.checked, tipoprenda, $event.target.className, $event.target)"
                           id="{{tipoprenda.value}}" />
@@ -107,12 +107,12 @@
                 </a>
                 <ul class="collapse list-unstyled" id="filterColor">
                   <div class="overflow-auto container-scroll">
-                    <li *ngFor="let color of colorData">
+                    <li *ngFor="let colores of colorData">
                       <label class="control control--checkbox">
-                        <input class="color check5" type="checkbox" value="{{color.value}}" name="{{color.value}}"
-                          (change)="validateCheckFilter($event.target.checked, color, $event.target.className, $event.target)"
-                          id="{{color.value}}" />
-                        {{color.text}}
+                        <input class="color" type="checkbox" value="{{colores.value}}" name="{{colores.value}}"
+                          (change)="validateCheckFilter($event.target.checked, colores, $event.target.className, $event.target)"
+                          id="{{colores.value}}" />
+                        {{colores.text}}
                       </label>
                     </li>
                   </div>
@@ -186,7 +186,7 @@
 
                 <li *ngFor="let origin of originData">
                   <label class="control control--checkbox">
-                    <input class="marca2 check" type="checkbox" value="{{origin.value}}" name="{{origin.value}}"
+                    <input class="marca2" type="checkbox" value="{{origin.value}}" name="{{origin.value}}"
                       (change)="validateCheckFilter2($event.target.checked, origin, $event.target.className, $event.target)"
                       id="{{origin.value}}" />
                     {{origin.text}}
@@ -202,7 +202,7 @@
               <ul class="collapse list-unstyled" id="filterCategory">
                 <li *ngFor="let category of categoryData">
                   <label class="control control--checkbox">
-                    <input class="categoria2 check2" type="checkbox" value="{{category.value}}" name="{{category.value}}"
+                    <input class="categoria2" type="checkbox" value="{{category.value}}" name="{{category.value}}"
                       (change)="validateCheckFilter2($event.target.checked, category, $event.target.className, $event.target)"
                       id="{{category.value}}" />
                     {{category.text}}
@@ -219,7 +219,7 @@
                 <li *ngFor="let subcategory of subCategoryData">
                   <label class="control control--checkbox">
 
-                    <input class="subCategoria2 check3" type="checkbox" value="{{subcategory.value}}"
+                    <input class="subCategoria2" type="checkbox" value="{{subcategory.value}}"
                       name="{{subcategory.value}}"
                       (change)="validateCheckFilter2($event.target.checked, subcategory, $event.target.className, $event.target)"
                       id="{{subcategory.value}}" />
@@ -237,7 +237,7 @@
                 <div class="overflow-auto container-scroll">
                   <li *ngFor="let tipoprenda of tipoPrendaData">
                     <label class="control control--checkbox">
-                      <input class="tipoPrenda2 check4" type="checkbox" value="{{tipoprenda.value}}"
+                      <input class="tipoPrenda2" type="checkbox" value="{{tipoprenda.value}}"
                         name="{{tipoprenda.value}}"
                         (change)="validateCheckFilter2($event.target.checked, tipoprenda, $event.target.className, $event.target)"
                         id="{{tipoprenda.value}}" />
@@ -256,7 +256,7 @@
                 <div class="overflow-auto container-scroll">
                   <li *ngFor="let color of colorData">
                     <label class="control control--checkbox">
-                      <input class="color2 check5" type="checkbox" value="{{color.value}}" name="{{color.value}}"
+                      <input class="color2" type="checkbox" value="{{color.value}}" name="{{color.value}}"
                         (change)="validateCheckFilter2($event.target.checked, color, $event.target.className, $event.target)"
                         id="{{color.value}}" />
                       {{color.text}}
