se implementa tasa de frescura

--- a/src/app/components/informes/informe-sku/informe-sku.component.html
+++ b/src/app/components/informes/informe-sku/informe-sku.component.html
@@ -292,6 +292,7 @@
         <th>SKU</th>
         <th>Precio promedio</th>
         <th>Nueva llegada</th>
+        <th>Tasa de frescura</th>
         <th>Descuento promedio</th>
       </tr>
     </thead>
@@ -303,6 +304,7 @@
         <td data-label="SKU"> {{tableAvgSKU}} </td>
         <td data-label="Precio promedio">$ {{averagePrice}} </td>
         <td data-label="Nueva llegada"> {{averageNews2}} </td>
+        <td data-label="Tasa de frescura"> {{tasaFrescura}} </td>
         <td data-label="Descuento promedio"> {{averageDiscount2}} % </td>
       </tr>
     </tbody>
